--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "angular-file-upload": "^2.4.1",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "loopback-component-passport": "^3.1.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
