--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "angular-file-upload": "^2.4.1",
     "body-parser": "~1.15.2",
+    "cloudinary": "^1.6.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "loopback-component-passport": "^3.1.0",
     "morgan": "~1.7.0",
+    "ng-file-upload": "^12.2.13",
     "serve-favicon": "~2.3.0"
   }
 }
